Домашняя работа pandas и numpy от 30 мая версия 2

--- a/les_1/Вычисления_с_помощью_Numpy.ipynb
+++ b/les_1/Вычисления_с_помощью_Numpy.ipynb
@@ -22,15 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([[1,  2,  3,  3,  1], [6, 8, 11, 10, 7]]).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "a = np.array([[1,  2,  3,  3,  1], [6, 8, 11, 10, 7]]).T\n",
     "mean_a = np.mean(a, axis = 0)"
    ]
   },
