--- a/les_1/Работа_с_данными_в_Pandas.ipynb
+++ b/les_1/Работа_с_данными_в_Pandas.ipynb
@@ -100,12 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_info = authors_price.pivot_table(values=['price'], \n",
-    "                                      index=['author_name'],\n",
-    "                                      columns = ['cover'],\n",
-    "                                      aggfunc = 'sum', \n",
-    "                                      margins = True, \n",
-    "                                      fill_value = 0)"
+    "book_info = authors_price.pivot_table(values=['price'], index=['author_name'],\n",
+    "                                      columns = ['cover'],aggfunc = 'sum', \n",
+    "                                      margins = True, fill_value = 0)"
    ]
   },
   {
